gcc/testsuite/rust/rustc/ui/entry-point/imported_main_const_forbidden_dg.rs
pub mod foo {
    pub const BAR: usize = 42;
}

use foo::BAR as main; // { dg-error ".E0601." "" { target *-*-* } }

